--- a/Opg1-Variables/index.html
+++ b/Opg1-Variables/index.html
@@ -13,7 +13,7 @@
 
 			<h1 class="neon">Open<br>all night!</h1>
 
-			<h2>Las Vegas</h2>
+			<h2>Las Vegas!</h2>
 
 			<p>Las Vegas, officially the City of Las Vegas and often known simply as Vegas, is the 29th-most populated city in the United States, the most populated city in the state of Nevada, and the county seat of Clark County. Las Vegas is an internationally renowned major resort city known primarily for its gambling, shopping, fine dining, entertainment, and nightlife.</p>
 			
