color and dummyimage corrections

--- a/Opg5-Funktioner-loop/index.html
+++ b/Opg5-Funktioner-loop/index.html
@@ -19,6 +19,13 @@
         <div class="kasse-7"></div>
         <div class="kasse-8"></div>
         <div class="kasse-9"></div>
+        <div class="kasse-10"></div>
+        <div class="kasse-11"></div>
+        <div class="kasse-12"></div>
+        <div class="kasse-13"></div>
+        <div class="kasse-14"></div>
+        <div class="kasse-15"></div>
+        <div class="kasse-16"></div>
     </div>
 </body>
 </html>
