--- a/Opg4-Matematiske-operatorer/index.html
+++ b/Opg4-Matematiske-operatorer/index.html
@@ -11,19 +11,19 @@
     <h1>Image grid</h1>
 
     <div class="imagegrid">
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
-        <div class="item"><img src="https://via.placeholder.com/700x700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
+        <div class="item"><img src="https://dummyimage.com/700" alt="thumbnail"></div>
     </div>
 </body>
 </html>
